--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Pomodoro</title>
+    <title>Centralize - Productivity Partner</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -9,32 +9,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="title" content="Pomodoro" />
+    <meta name="title" content="Centralize" />
     <meta
       name="keywords"
-      content="Pomodoro, Challenge, Study, Meditate, Abhin Rustagi"
+      content="Centralize, Pomodoro, Challenge, Study, Meditate, Abhin Rustagi"
     />
-    <link
-      rel="canonical"
-      href="http://abhinrustagi.github.io/pomodoro-challenge"
-    />
+    <link rel="canonical" href="https://centralize.abhinrustagi.xyz/" />
     <meta
       name="description"
-      content="The Pomodoro Technique was developed in the late 1980s by then university student Francesco Cirillo. Cirillo was struggling to focus on his studies and complete assignments. Feeling overwhelmed, he asked himself to commit to just 10 minutes of focused study time. Encouraged by the challenge, he found a tomato (pomodoro in Italian) shaped kitchen timer, and the Pomodoro technique was born."
+      content="The Centralize App is your solution to productivity woes. Built on the Pomodoro Technique at its core. The App promises a meditative experience to bring the best out of you. Designed & developed by Abhin Rustagi."
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Abhin Rustagi" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="http://abhinrustagi.github.io/pomodoro-challenge"
-    />
-    <meta property="og:title" content="Pomodoro" />
+    <meta property="og:url" content="https://centralize.abhinrustagi.xyz/" />
+    <meta property="og:title" content="Centralize" />
     <meta
       property="og:description"
-      content="The Pomodoro Technique was developed in the late 1980s by then university student Francesco Cirillo. Cirillo was struggling to focus on his studies and complete assignments. Feeling overwhelmed, he asked himself to commit to just 10 minutes of focused study time. Encouraged by the challenge, he found a tomato (pomodoro in Italian) shaped kitchen timer, and the Pomodoro technique was born."
+      content="The Centralize App is your solution to productivity woes. Built on the Pomodoro Technique at its core. The App promises a meditative experience to bring the best out of you. Designed & developed by Abhin Rustagi."
     />
     <meta
       property="og:image"
@@ -45,12 +39,12 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="http://abhinrustagi.github.io/pomodoro-challenge"
+      content="https://centralize.abhinrustagi.xyz/"
     />
-    <meta property="twitter:title" content="Pomodoro" />
+    <meta property="twitter:title" content="Centralize" />
     <meta
       property="twitter:description"
-      content="The Pomodoro Technique was developed in the late 1980s by then university student Francesco Cirillo. Cirillo was struggling to focus on his studies and complete assignments. Feeling overwhelmed, he asked himself to commit to just 10 minutes of focused study time. Encouraged by the challenge, he found a tomato (pomodoro in Italian) shaped kitchen timer, and the Pomodoro technique was born."
+      content="The Centralize App is your solution to productivity woes. Built on the Pomodoro Technique at its core. The App promises a meditative experience to bring the best out of you. Designed & developed by Abhin Rustagi."
     />
     <meta
       property="twitter:image"
@@ -63,13 +57,6 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.ong" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
