--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Centralize - Productivity Partner</title>
-
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <meta name="title" content="Centralize" />
+    <meta name="title" content="Centralize - Productivity Partner" />
     <meta
       name="keywords"
-      content="Centralize, Pomodoro, Challenge, Study, Meditate, Abhin Rustagi"
+      content="pomodoro, productivity, centralize, abhin rustagi, react, firebase, timer"
     />
+    <meta name="theme-color" content="#000000" />
     <link rel="canonical" href="https://centralize.abhinrustagi.xyz/" />
     <meta
       name="description"
-      content="The Centralize App is your solution to productivity woes. Built on the Pomodoro Technique at its core. The App promises a meditative experience to bring the best out of you. Designed & developed by Abhin Rustagi."
+      content="Pomodoro Technique based Productivity Application"
     />
     <meta name="robots" content="index, follow" />
-    <meta name="author" content="Abhin Rustagi" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-V2RY0F81BW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-V2RY0F81BW");
+    </script>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://centralize.abhinrustagi.xyz/" />
-    <meta property="og:title" content="Centralize" />
+    <meta property="og:title" content="Centralize - Productivity Partner" />
     <meta
       property="og:description"
-      content="The Centralize App is your solution to productivity woes. Built on the Pomodoro Technique at its core. The App promises a meditative experience to bring the best out of you. Designed & developed by Abhin Rustagi."
+      content="Pomodoro Technique based Productivity Application"
     />
-    <meta
-      property="og:image"
-      content="%PUBLIC_URL%/android-chrome-512x512.png"
-    />
+    <meta property="og:image" content="Image URL" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -41,22 +48,24 @@
       property="twitter:url"
       content="https://centralize.abhinrustagi.xyz/"
     />
-    <meta property="twitter:title" content="Centralize" />
+    <meta
+      property="twitter:title"
+      content="Centralize - Productivity Partner"
+    />
     <meta
       property="twitter:description"
-      content="The Centralize App is your solution to productivity woes. Built on the Pomodoro Technique at its core. The App promises a meditative experience to bring the best out of you. Designed & developed by Abhin Rustagi."
+      content="Pomodoro Technique based Productivity Application"
     />
-    <meta
-      property="twitter:image"
-      content="%PUBLIC_URL%/android-chrome-512x512.png"
-    />
+    <meta property="twitter:image" content="Image URL" />
+
     <link
       rel="shortcut icon"
       href="%PUBLIC_URL%/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.ong" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Centralize - Productivity Partner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
